RESOLVED FIXED253941
Fix css/selectors/invalidation/nth-child-of-in-ancestor.html WPT
https://bugs.webkit.org/show_bug.cgi?id=253941
Summary Fix css/selectors/invalidation/nth-child-of-in-ancestor.html WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-14 23:57:02 PDT
Cameron McCormack (:heycam)
Comment 2 2023-09-03 00:53:21 PDT
EWS
Comment 3 2023-09-03 20:52:46 PDT
Committed 267600@main (0c0bfc05ec5c): <https://commits.webkit.org/267600@main> Reviewed commits have been landed. Closing PR #17384 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.