Invalidate :nth-child() selectors correctly when not in subject position https://bugs.webkit.org/show_bug.cgi?id=253941 rdar://106740353

Reviewed by Antti Koivisto.

We use MatchResult::AnySibling when an element that matches the selector
inside an :nth-child() pseudo-class changes. But when we process that
invalidation, it only invalidates the element itself. This means that
AnySibling is only correct when the :nth-child() is in the subject
position.

Introduce MatchResult::ParentAnySibling and AncestorAnySibling to
represent invalidations required for :nth-child() pseudo-classes
followed by child or descendant combinators.

Canonical link: https://commits.webkit.org/267600@main